@@ -16,4 +16,7 @@
   <!-- dispatch IObjectClonedEvent with "top-down" semantics -->
   <subscriber handler="OFS.subscribers.dispatchObjectClonedEvent" />
 
+  <!-- dispatch IObjectCopiedEvent with "top-down" semantics -->
+  <subscriber handler="OFS.subscribers.dispatchObjectCopiedEvent" />
+
 </configure>
