@@ -57,6 +57,7 @@ printed events will be in their "natural" order::
 
   >>> from zope.component.interfaces import IObjectEvent, IRegistrationEvent
   >>> from zope.app.container.interfaces import IObjectMovedEvent
+  >>> from zope.lifecycleevent.interfaces import IObjectCopiedEvent
   >>> from OFS.interfaces import IObjectWillBeMovedEvent
   >>> from OFS.interfaces import IObjectClonedEvent
   >>> from OFS.interfaces import IItem
@@ -64,6 +65,7 @@ printed events will be in their "natural" order::
   ...     print event.__class__.__name__, object.getId()
   >>> def printObjectEventExceptSome(object, event):
   ...     if (IObjectMovedEvent.providedBy(event) or
+  ...         IObjectCopiedEvent.providedBy(event) or
   ...         IObjectWillBeMovedEvent.providedBy(event) or
   ...         IObjectClonedEvent.providedBy(event) or
   ...         IRegistrationEvent.providedBy(event)):
@@ -72,6 +74,7 @@ printed events will be in their "natural" order::
 
   >>> from zope.component import provideHandler
   >>> provideHandler(printObjectEvent, (IItem, IObjectMovedEvent))
+  >>> provideHandler(printObjectEvent, (IItem, IObjectCopiedEvent))
   >>> provideHandler(printObjectEvent, (IItem, IObjectWillBeMovedEvent))
   >>> provideHandler(printObjectEvent, (IItem, IObjectClonedEvent))
   >>> provideHandler(printObjectEventExceptSome, (None, IObjectEvent))
@@ -83,6 +86,7 @@ Finally we need to load the subscribers configuration::
   >>> zope.component.provideAdapter(OFS.subscribers.ObjectManagerSublocations)
   >>> zope.component.provideHandler(OFS.subscribers.dispatchObjectWillBeMovedEvent)
   >>> zope.component.provideHandler(OFS.subscribers.dispatchObjectMovedEvent)
+  >>> zope.component.provideHandler(OFS.subscribers.dispatchObjectCopiedEvent)
   >>> zope.component.provideHandler(OFS.subscribers.dispatchObjectClonedEvent)
 
 We need at least one fake deprecated method to tell the compatibility
@@ -133,6 +137,7 @@ Same thing for clone::
 
   >>> res = folder.manage_clone(folder.marine, 'tank')
   ObjectCopiedEvent tank
+  ObjectCopiedEvent dog
   ObjectWillBeAddedEvent tank
   ObjectWillBeAddedEvent dog
   ObjectAddedEvent tank
@@ -282,6 +287,7 @@ Cloning a tree of objects::
 
   >>> res = folder.manage_clone(folder.pluto, 'mickey')
   ObjectCopiedEvent mickey
+  ObjectCopiedEvent donald
   ObjectWillBeAddedEvent mickey
   ObjectWillBeAddedEvent donald
   ObjectAddedEvent mickey
@@ -414,6 +420,7 @@ Cloning a tree of objects::
 
   >>> res = folder.manage_clone(folder.firefly, 'serenity')
   ObjectCopiedEvent serenity
+  ObjectCopiedEvent mel
   ObjectWillBeAddedEvent serenity
   ObjectWillBeAddedEvent mel
   ObjectAddedEvent serenity
